[metadata]
name = broadview-collector
summary = broadview-collector is a plugin-based service that collects and publishes network underlay data to services such as Monasca.
description-file =
    README.md
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    broadview_collector

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = broadview_collector/locale
domain = broadview_collector

[update_catalog]
domain = broadview_collector
output_dir = broadview_collector/locale
input_file = broadview_collector/locale/broadview_collector.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = broadview_collector/locale/broadview_collector.pot
